NEW: Section 5 fist half

--- a/main.tex
+++ b/main.tex
@@ -19,5 +19,6 @@
     \include{./02_ApplicationLayer.tex}
     \include{./03_TransportLayer.tex}
     \include{./04_Algorithms.tex}
+    \include{./05_NetworkLayer.tex}
 
 \end{document}
