--- a/02_RelationalModel.tex
+++ b/02_RelationalModel.tex
@@ -43,7 +43,10 @@
     \item ``Represented'' a set of rows in the table
     \item Set of tuples $\text{I}_R \subseteq \text{D}_1 \times \dots \times \text{D}_n$ for $\text{R}(\text{f}_1: \text{D}_1, \dots, \text{f}_n:\text{D}_n)$
     \ides{Domain Constraint:} For each filed the domain and the schema domain must match
-    \item In proactive a DB is a bag and not a set (allows duplicate entries)
+    \item In practice a DB is a bag and not a set (allows duplicate entries)
+        \begin{itemize}
+            \item But in theory we assume it is a set
+        \end{itemize}
     \item Attributes have no ordering principle, but ordering of attributes and tuples has to match
 \end{itemize}
 
