NEW: Integrity Constraint section

--- a/main.tex
+++ b/main.tex
@@ -18,5 +18,6 @@
     \include{./02_RelationalModel.tex}
     \include{./03_RelationalAlgebra.tex}
     \include{./05_Sql.tex}
+    \include{./09_IntegrityConstraints.tex}
 
 \end{document}
