NEW: Recursive query section

--- a/main.tex
+++ b/main.tex
@@ -19,5 +19,6 @@
     \include{./03_RelationalAlgebra.tex}
     \include{./05_Sql.tex}
     \include{./09_IntegrityConstraints.tex}
+    \include{./10_RecursiveQueries.tex}
 
 \end{document}
