NEW: Section about NULL

--- a/main.tex
+++ b/main.tex
@@ -20,5 +20,6 @@
     \include{./05_Sql.tex}
     \include{./09_IntegrityConstraints.tex}
     \include{./10_RecursiveQueries.tex}
+    \include{./11_Null.tex}
 
 \end{document}
