NEW: Section on views

--- a/main.tex
+++ b/main.tex
@@ -21,5 +21,6 @@
     \include{./09_IntegrityConstraints.tex}
     \include{./10_RecursiveQueries.tex}
     \include{./11_Null.tex}
+    \include{./12_View.tex}
 
 \end{document}
